--- a/app/nav/partials/navigation.html
+++ b/app/nav/partials/navigation.html
@@ -14,6 +14,6 @@
         </div>
         <div class="logOutButtonWrapper">
             <button ng-if="isAuthenticated()" ng-click="logout()">Log Out</button>
-        <div>
+        </div>
     </div>
 </div>
