--- a/app/userGear/partials/userNav.html
+++ b/app/userGear/partials/userNav.html
@@ -4,16 +4,17 @@
 
         <div class="userNavButtonsRow" ng-if="isAuthenticated()">
             <div class="searchForPricesButtonWrapper">
-                <button ng-click="toSearches()">Search For Prices</button>
+                <button class="searchForPricesButton" ng-click="toSearches()">Search For Prices</button>
             </div>
             <div class="showYourGuitarsButtonWrapper">  
-                <button ng-click="toDisplayUserGuitars()">Show Your Guitars</button>
+                <button class="showYourGuitarsButton" ng-click="toDisplayUserGuitars()">Show Your Guitars</button>
             </div>
             <div class="enterNewGuitarButtonWrapper">
-                <button ng-click="toGuitarIntakeForm()">Enter New Guitar</button>
+                <button class="enterNewGuitarButton" ng-click="toGuitarIntakeForm()">Enter New Guitar</button>
             </div>
 
         </div>
+
 
     </div>
 
