--- a/css/basicSearch.css
+++ b/css/basicSearch.css
@@ -2,44 +2,125 @@
     display: grid;
     background-color: lightgrey;
     grid-area: body;
-    grid-template-columns:1fr 4fr 1fr;
-    grid-template-rows: 1fr 2fr 2fr 1fr;
+    grid-template-columns:1fr 5fr 5fr 5fr 1fr;
+    grid-template-rows: 2fr 1fr 6fr 8fr 1fr;
     grid-template-areas: 
-    ". adv ."
-    ". search ."
-    ". results ."
-    ". . ."
+    ". . adv . ."
+    ". . . . ."
+    ". . search . ."
+    ". . results . ."
+    ". . . . ."
     ;
 }
 
+
 .advancedSearchLinkWrapper {
-    display: grid;
     grid-area: adv;
     align-self: center;
     justify-self: center;
 }
 
+
 .searchDivWrapper {
-    display: subgrid;
+    display: grid;
     grid-area: search;
     align-self: center;
+    background-color: #cacacad9;
+    box-shadow: .1em .2em 1em .1em #b9b9b9a1;
     justify-self: center;
-    grid-template-rows: 2fr 4fr;
+    border: .13em solid #fbfeffe0;
+    padding: 0 2em 0 2em;
+    grid-template-rows: 4fr 2fr 4fr;
     grid-template-areas:
+    "title"
     "basicSearchBar"
     "basicSearchButton"
     ; 
 }
 
+.basicSearchTitle {
+    grid-area: title;
+    text-align: center;
+    justify-self: center;
+    align-self: center;
+    font-size: 1.8em;
+}
+
 .basicSearchResultsDisplay {
-    display: subgrid;
+    display: grid;
     grid-area: results;
+}
+
+.basicSearchBar {
+    width: 20em;
+    height: 1.4em;
+    font-size: 1.3em;
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+    box-shadow: 0 0 1em rgba(231, 244, 250, 0.18);
 }
 
 .basicSearchWrapper {
     grid-area: basicSearchBar;
+    justify-self: center;
+    align-self: center;
+    margin-top: -.3em;
+    margin-bottom: .3em;
 }
 
 .basicSearchButtonWrapper {
     grid-area: basicSearchButton;
+    justify-self: center;
+    align-self: center;
+    margin-top: -1.3em;
+  
+}
+
+.basicSearchButton {
+  background-color: lightskyblue;
+  display: flex;
+  overflow: hidden;
+  margin-bottom: -.5em;
+  padding: 12px 12px;
+  cursor: pointer;
+  user-select: none;
+  text-align: center;
+  white-space: nowrap;
+  text-decoration: none;
+  text-transform: none;
+  color: #fff;
+  border: 0 none;
+  border-radius: 4px;
+  font-size: 1.3em;
+  font-weight: 500;
+  line-height: 1.3;
+  width: 7em;
+  justify-content: center;
+  align-items: center;
+  box-shadow: .1em .2em 1em .1em #b9b9b9a1;
+}
+
+.toAdvancedSearchButton {
+background-color: lightskyblue;
+display: flex;
+overflow: hidden;
+margin-top: 1.2em;
+padding: 12px 12px;
+cursor: pointer;
+user-select: none;
+text-align: center;
+white-space: nowrap;
+text-decoration: none;
+text-transform: none;
+color: #fff;
+border: 0 none;
+border-radius: 4px;
+font-size: 1.1em;
+font-weight: 500;
+line-height: 1.3;
+width: 9em;
+justify-content: center;
+align-self: start;
+box-shadow: .1em .2em 1em .1em #b9b9b9a1;
 }
