--- a/css/basicSearch.css
+++ b/css/basicSearch.css
@@ -1,6 +1,6 @@
 .basicSearchContentWrapper {
     display: grid;
-    background-color: lightgrey;
+    background-color: #678CB1;
     grid-area: body;
     grid-template-columns:1fr 5fr 5fr 5fr 1fr;
     grid-template-rows: 2fr 1fr 6fr 8fr 1fr;
@@ -25,10 +25,9 @@
     display: grid;
     grid-area: search;
     align-self: center;
-    background-color: #cacacad9;
-    box-shadow: .1em .2em 1em .1em #b9b9b9a1;
+    background-color: #657b8387;
     justify-self: center;
-    border: .13em solid #fbfeffe0;
+    border: .13em solid #E0E2E4;
     padding: 0 2em 0 2em;
     grid-template-rows: 4fr 2fr 4fr;
     grid-template-areas:
@@ -58,7 +57,7 @@
     justify-self: center;
     align-self: center;
     text-align: center;
-    box-shadow: 0 0 1em rgba(231, 244, 250, 0.18);
+    background-color: #E0E2E4;
 }
 
 .basicSearchWrapper {
@@ -78,7 +77,8 @@
 }
 
 .basicSearchButton {
-  background-color: lightskyblue;
+  background-color: #268bd263;
+  border: solid 1px #E0E2E4;
   display: flex;
   overflow: hidden;
   margin-bottom: -.5em;
@@ -89,8 +89,7 @@
   white-space: nowrap;
   text-decoration: none;
   text-transform: none;
-  color: #fff;
-  border: 0 none;
+  color: #E0E2E4;
   border-radius: 4px;
   font-size: 1.3em;
   font-weight: 500;
@@ -98,11 +97,10 @@
   width: 7em;
   justify-content: center;
   align-items: center;
-  box-shadow: .1em .2em 1em .1em #b9b9b9a1;
 }
 
 .toAdvancedSearchButton {
-background-color: lightskyblue;
+background-color: #268bd263;
 display: flex;
 overflow: hidden;
 margin-top: 1.2em;
@@ -113,8 +111,8 @@ text-align: center;
 white-space: nowrap;
 text-decoration: none;
 text-transform: none;
-color: #fff;
-border: 0 none;
+color: #E0E2E4;
+border: solid 1px #E0E2E4;
 border-radius: 4px;
 font-size: 1.1em;
 font-weight: 500;
@@ -122,5 +120,4 @@ line-height: 1.3;
 width: 9em;
 justify-content: center;
 align-self: start;
-box-shadow: .1em .2em 1em .1em #b9b9b9a1;
 }
