better styles for navs and welcome search

--- a/app/guitars/partials/welcomePage.html
+++ b/app/guitars/partials/welcomePage.html
@@ -3,11 +3,19 @@
 <div class="basicSearchContentWrapper">
 
     <div class="advancedSearchLinkWrapper">
+        <h4 class="advSearchInstructionsClass">If you would like more refined search results, try our advanced search</h4>
         <button class="toAdvancedSearchButton" ng-click="toAdvancedSearch()">Advanced Search</button>
     </div>
 
     <div class="searchDivWrapper">
-        <h3 class="basicSearchTitle">Basic Search</h3>
+        <div class="basicSearchTitleWrapper">
+            <h3 class="basicSearchTitle">
+                Basic Search
+            </h3>
+            <h2 class="basicSearchInstructions">
+                Enter something simple like "fender stratocaster" or something more specific like "black USA fender standard stratocaster"
+            </h2>
+        </div>
         <div class="basicSearchWrapper">
             <input class="basicSearchBar" type="text" ng-model="basicSearchInput">
         </div>
