--- a/css/basicSearch.css
+++ b/css/basicSearch.css
@@ -1,6 +1,6 @@
 .basicSearchContentWrapper {
     display: grid;
-    margin: 1.5em 5em 3em 5em;    
+    margin: 3em 5em 3em 5em;    
     grid-area: body;
     grid-template-columns:1fr 5fr 2fr 5fr 5fr;
     grid-template-rows: 1fr 2fr 4fr 8fr 1fr;
@@ -14,9 +14,22 @@
 }
 
 .advancedSearchLinkWrapper {
+    display: grid;
     grid-area: adv;
     align-self: center;
     justify-self: center;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+    "advInstructions"
+    "advButton"
+    ;
+}
+
+.advSearchInstructionsClass {
+    grid-area: advInstructions;
+    margin-left: .6em;
+    text-align: center;
+    color: rgba(155, 155, 155, 0.945);
 }
 
 .searchDivWrapper {
@@ -26,7 +39,7 @@
     background-color: #FFF;
     justify-self: center;
     padding: 0 2em 0 2em;
-    border: .3em solid rgba(216, 216, 216, 0.959);
+    border-right: .3em solid rgba(216, 216, 216, 0.959);
     grid-template-rows: 4fr 2fr;
     grid-template-columns: 3fr 1fr;
     grid-template-areas:
@@ -35,12 +48,20 @@
     ; 
 }
 
-.basicSearchTitle {
+.basicSearchTitleWrapper {
     grid-area: title;
-    text-align: center;
-    justify-self: center;
-    align-self: center;
+
+}
+
+.basicSearchTitle {
+    color: rgba(155, 155, 155, 0.952);
     font-size: 1.8em;
+}
+
+.basicSearchInstructions {
+    margin-top: -1.7em;
+    font-size: 1em;
+    color: rgba(90, 90, 90, 0.952);
 }
 
 .basicSearchResultsDisplay {
@@ -50,6 +71,7 @@
 
 .basicSearchBar {
     outline: none;
+    margin-top: .4em;
     width: 20em;
     height: 1.4em;
     font-size: 1.3em;
@@ -71,10 +93,38 @@
 
 .basicSearchButtonWrapper {
     grid-area: basicSearchButton;
+    align-self: center;
+    justify-self: center;
+    text-align: center;
     margin-left: .2em;
 }
 
 .basicSearchButton {
+    grid-area: advButton;
+    align-self: center;
+    justify-self: center;
+    background-color: #FFF;
+    outline: none;
+    overflow: hidden;
+    padding: .5em;
+    cursor: pointer;
+    user-select: none;
+    text-align: center;
+    white-space: nowrap;
+    text-decoration: none;
+    text-transform: none;
+    color: rgb(111, 225, 253);
+    border: solid .3em rgb(111, 225, 253);
+    border-radius: 4px;
+    font-size: .9em;
+    font-weight: 900;
+    line-height: .8em;
+    width: 7em;
+}
+
+.toAdvancedSearchButton {
+    margin-top: .8em;
+    grid-area: advButton;
     align-self: center;
     justify-self: center;
     background-color: #FFF;
@@ -94,27 +144,4 @@
     font-weight: 900;
     line-height: .8em;
     width: 11em;
-}
-
-.toAdvancedSearchButton {
-background-color: #268bd263;
-display: flex;
-overflow: hidden;
-margin-top: 1.2em;
-padding: 12px 12px;
-cursor: pointer;
-user-select: none;
-text-align: center;
-white-space: nowrap;
-text-decoration: none;
-text-transform: none;
-color: #E0E2E4;
-border: solid 1px #E0E2E4;
-border-radius: 4px;
-font-size: 1.1em;
-font-weight: 500;
-line-height: 1.3;
-width: 9em;
-justify-content: center;
-align-self: start;
 }
