--- a/app/guitars/partials/welcomePage.html
+++ b/app/guitars/partials/welcomePage.html
@@ -29,12 +29,12 @@
     </div>
 
     <div class="basicSearchResultsDisplay">
-        <div ng-repeat="prices in resultsArray">
-            <div>
+        <div class="basicSearchResultsWrapper" ng-repeat="prices in resultsArray">
+            <div class="basicSearchResultsTitles">
                 <h4>Current values for a {{userSearchTitle}}:</h4>
                 <h5 ng-if="isItTrue(prices.lowPrice)">Based off of {{prices.searchCount}} recent sales</h5>
             </div>
-            <div>
+            <div class="basicSearchResultsNumbers">
                 <p ng-if="isItFalse(prices.lowPrice)">There was only one recent sale for a {{userSearchTitle}}</p>
                 <p ng-if="isItTrue(prices.avgPrice)">Average Price: ${{prices.avgPrice}}</p>
                 <p ng-if="isItTrue(prices.lowPrice)">Price Range: ${{prices.lowPrice}} to ${{prices.highPrice}}</p>
