--- a/css/mainGrid.css
+++ b/css/mainGrid.css
@@ -9,3 +9,19 @@
     "body"
     ;
 }
+
+.averagePrice {
+    color: rgb(111, 225, 253);
+    font-size: 1.6em;    
+}
+
+.highPrice {
+    color: rgba(93, 245, 32, 0.938);
+    font-size: 1.6em;
+}
+
+.lowPrice {
+    color: rgba(251, 32, 87, 0.918);
+    font-size: 1.2em;    
+}
+
